// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebarBoardItem renders default icon if no custom icon set 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="1"
    data-rbd-droppable-id="droppable_id"
  >
    <div
      data-rbd-draggable-context-id="1"
      data-rbd-draggable-id="board_id_1"
    >
      <div
        aria-describedby="rbd-hidden-text-1-hidden-text-3"
        class="SidebarBoardItem subitem active"
        data-rbd-drag-handle-context-id="1"
        data-rbd-drag-handle-draggable-id="board_id_1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="octo-sidebar-icon"
        >
          <i
            class="CompassIcon icon-product-boards"
          />
        </div>
        <div
          class="octo-sidebar-title"
          title="board title"
        >
          board title
        </div>
        <div>
          <div
            aria-label="menuwrapper"
            class="MenuWrapper x"
            role="button"
          >
            <button
              class="IconButton"
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="SidebarBoardItem sidebar-view-item active"
      >
        <svg
          class="BoardIcon Icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        <div
          class="octo-sidebar-title"
          title="view title"
        >
          view title
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarBoardItem sidebar board item 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="0"
    data-rbd-droppable-id="droppable_id"
  >
    <div
      data-rbd-draggable-context-id="0"
      data-rbd-draggable-id="board_id_1"
    >
      <div
        aria-describedby="rbd-hidden-text-0-hidden-text-0"
        class="SidebarBoardItem subitem active"
        data-rbd-drag-handle-context-id="0"
        data-rbd-drag-handle-draggable-id="board_id_1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="octo-sidebar-icon"
        >
          i
        </div>
        <div
          class="octo-sidebar-title"
          title="board title"
        >
          board title
        </div>
        <div>
          <div
            aria-label="menuwrapper"
            class="MenuWrapper override menuOpened menuOpen"
            role="button"
          >
            <button
              class="IconButton"
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            <div
              class="Menu noselect auto  fixed"
              style="top: 40px;"
            >
              <div
                class="menu-contents"
              >
                <div
                  class="menu-options"
                >
                  <div>
                    <div
                      class="MenuOption SubMenuOption menu-option boardMoveToCategorySubmenu"
                      id="moveBlock"
                    >
                      <div
                        class="menu-option__icon"
                      >
                        <i
                          class="CompassIcon icon-folder-plus-outline CreateNewFolderIcon"
                        />
                      </div>
                      <div
                        class="menu-name"
                      >
                        Move To...
                      </div>
                      <i
                        class="CompassIcon icon-chevron-right"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      aria-label="Duplicate board"
                      class="MenuOption TextOption menu-option"
                      role="button"
                    >
                      <div
                        class="d-flex"
                      >
                        <div
                          class="menu-option__icon"
                        >
                          <i
                            class="CompassIcon icon-content-copy content-copy"
                          />
                        </div>
                      </div>
                      <div
                        class="menu-option__content"
                      >
                        <div
                          class="menu-name"
                        >
                          Duplicate board
                        </div>
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      aria-label="New template from board"
                      class="MenuOption TextOption menu-option"
                      role="button"
                    >
                      <div
                        class="d-flex"
                      >
                        <div
                          class="menu-option__icon"
                        >
                          <i
                            class="CompassIcon icon-plus AddIcon"
                          />
                        </div>
                      </div>
                      <div
                        class="menu-option__content"
                      >
                        <div
                          class="menu-name"
                        >
                          New template from board
                        </div>
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      aria-label="Export board archive"
                      class="MenuOption TextOption menu-option"
                      role="button"
                    >
                      <div
                        class="d-flex"
                      >
                        <div
                          class="menu-option__icon"
                        >
                          <i
                            class="CompassIcon icon-export-variant"
                          />
                        </div>
                      </div>
                      <div
                        class="menu-option__content"
                      >
                        <div
                          class="menu-name"
                        >
                          Export board archive
                        </div>
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      aria-label="Hide board"
                      class="MenuOption TextOption menu-option"
                      role="button"
                    >
                      <div
                        class="d-flex"
                      >
                        <div
                          class="menu-option__icon"
                        >
                          <i
                            class="CompassIcon icon-close CloseIcon"
                          />
                        </div>
                      </div>
                      <div
                        class="menu-option__content"
                      >
                        <div
                          class="menu-name"
                        >
                          Hide board
                        </div>
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      aria-label="Delete board"
                      class="MenuOption TextOption menu-option text-danger"
                      role="button"
                    >
                      <div
                        class="d-flex"
                      >
                        <div
                          class="menu-option__icon"
                        >
                          <i
                            class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                          />
                        </div>
                      </div>
                      <div
                        class="menu-option__content"
                      >
                        <div
                          class="menu-name"
                        >
                          Delete board
                        </div>
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="menu-spacer hideOnWidescreen"
                />
                <div
                  class="menu-options hideOnWidescreen"
                >
                  <div
                    aria-label="Cancel"
                    class="MenuOption TextOption menu-option menu-cancel"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Cancel
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="SidebarBoardItem sidebar-view-item active"
      >
        <svg
          class="BoardIcon Icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        <div
          class="octo-sidebar-title"
          title="view title"
        >
          view title
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarBoardItem sidebar board item for guest 1`] = `
<div>
  <div
    data-rbd-droppable-context-id="2"
    data-rbd-droppable-id="droppable_id"
  >
    <div
      data-rbd-draggable-context-id="2"
      data-rbd-draggable-id="board_id_1"
    >
      <div
        aria-describedby="rbd-hidden-text-2-hidden-text-6"
        class="SidebarBoardItem subitem active"
        data-rbd-drag-handle-context-id="2"
        data-rbd-drag-handle-draggable-id="board_id_1"
        draggable="false"
        role="button"
        tabindex="0"
      >
        <div
          class="octo-sidebar-icon"
        >
          i
        </div>
        <div
          class="octo-sidebar-title"
          title="board title"
        >
          board title
        </div>
        <div>
          <div
            aria-label="menuwrapper"
            class="MenuWrapper override menuOpened menuOpen"
            role="button"
          >
            <button
              class="IconButton"
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            <div
              class="Menu noselect auto  fixed"
              style="top: 40px;"
            >
              <div
                class="menu-contents"
              >
                <div
                  class="menu-options"
                >
                  <div>
                    <div
                      class="MenuOption SubMenuOption menu-option boardMoveToCategorySubmenu"
                      id="moveBlock"
                    >
                      <div
                        class="menu-option__icon"
                      >
                        <i
                          class="CompassIcon icon-folder-plus-outline CreateNewFolderIcon"
                        />
                      </div>
                      <div
                        class="menu-name"
                      >
                        Move To...
                      </div>
                      <i
                        class="CompassIcon icon-chevron-right"
                      />
                    </div>
                  </div>
                  <div />
                  <div />
                  <div>
                    <div
                      aria-label="Export board archive"
                      class="MenuOption TextOption menu-option"
                      role="button"
                    >
                      <div
                        class="d-flex"
                      >
                        <div
                          class="menu-option__icon"
                        >
                          <i
                            class="CompassIcon icon-export-variant"
                          />
                        </div>
                      </div>
                      <div
                        class="menu-option__content"
                      >
                        <div
                          class="menu-name"
                        >
                          Export board archive
                        </div>
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      aria-label="Hide board"
                      class="MenuOption TextOption menu-option"
                      role="button"
                    >
                      <div
                        class="d-flex"
                      >
                        <div
                          class="menu-option__icon"
                        >
                          <i
                            class="CompassIcon icon-close CloseIcon"
                          />
                        </div>
                      </div>
                      <div
                        class="menu-option__content"
                      >
                        <div
                          class="menu-name"
                        >
                          Hide board
                        </div>
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      aria-label="Delete board"
                      class="MenuOption TextOption menu-option text-danger"
                      role="button"
                    >
                      <div
                        class="d-flex"
                      >
                        <div
                          class="menu-option__icon"
                        >
                          <i
                            class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                          />
                        </div>
                      </div>
                      <div
                        class="menu-option__content"
                      >
                        <div
                          class="menu-name"
                        >
                          Delete board
                        </div>
                      </div>
                      <div
                        class="noicon"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="menu-spacer hideOnWidescreen"
                />
                <div
                  class="menu-options hideOnWidescreen"
                >
                  <div
                    aria-label="Cancel"
                    class="MenuOption TextOption menu-option menu-cancel"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="noicon"
                      />
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Cancel
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="SidebarBoardItem sidebar-view-item active"
      >
        <svg
          class="BoardIcon Icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.8"
          >
            <path
              clip-rule="evenodd"
              d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        <div
          class="octo-sidebar-title"
          title="view title"
        >
          view title
        </div>
      </div>
    </div>
  </div>
</div>
`;
